<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:hint="@string/user_id_hint" />

    <EditText
        android:id="@+id/userBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userId"
        android:layout_marginTop="20dp"
        android:hint="@string/user_birthday_hint" />

    <EditText
        android:id="@+id/userPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userBirthday"
        android:layout_marginTop="20dp"
        android:hint="@string/user_pass_hint" />


    <Button
        android:id="@+id/submitUserInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userPass"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/submit_user_info_button_text"
        android:textColor="@android:color/white" />


</RelativeLayout>
