<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/planDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:hint="@string/plan_date_hint" />

        <EditText
            android:id="@+id/planContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/planDate"
            android:layout_marginTop="20dp"
            android:hint="@string/plan_content_hint" />

        <Button
            android:id="@+id/submitPlanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/planContent"
            android:layout_centerHorizontal="true"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_bg"
            android:textColor="@android:color/white"
            android:text="@string/submit_plan_button_text" />


    </RelativeLayout>
</FrameLayout>
